--- a/src/components/admin/AdminDataTable/AdminDataTable.module.css
+++ b/src/components/admin/AdminDataTable/AdminDataTable.module.css
@@ -223,6 +223,11 @@
   margin-right: 10px;
 }
 
+.headerTextInput {
+  width: 40%;
+  margin-left: 10px;
+}
+
 @media screen and (max-width: 992px) {
   .inputWrapper {
     width: 200px;
