--- a/src/components/admin/DashboardLayout/DashboardLayout.module.css
+++ b/src/components/admin/DashboardLayout/DashboardLayout.module.css
@@ -1,6 +1,7 @@
 .pageContainer {
   background: var(--ghost-white-color);
   padding-bottom: 20px;
+  min-height: calc(100vh - 171px);
 }
 
 .pageHolder {
