--- a/src/components/common/CustomDatePicker/CustomDatePicker.module.css
+++ b/src/components/common/CustomDatePicker/CustomDatePicker.module.css
@@ -24,7 +24,11 @@
   font-size: 14px;
 }
 
-input[type='date'],
+.dateHasValue {
+  color: black !important;
+}
+
+input[type="date"],
 input[type='time'] {
   color: #aeb7bb;
   font-size: 14px;
