--- a/src/components/admin/ConfirmPopup/ConfirmPopup.module.css
+++ b/src/components/admin/ConfirmPopup/ConfirmPopup.module.css
@@ -20,7 +20,7 @@
     width: 80%;
     height: 90%;
     max-width: 570px;
-    max-height: 350px;
+    height: 350px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     background: #ffffff 0 0 no-repeat padding-box;
     padding: 30px 45px;
@@ -58,6 +58,7 @@
 @media screen and (max-width: 992px) {
     .confirmPopup {
         padding-top: 20px;
+        height: max-content;
     }
 
     .title {
@@ -76,6 +77,5 @@
 @media screen and (max-width: 768px) {
     .confirmPopup {
         width: 100%;
-        height: 100%;
     }
 }
