--- a/src/components/common/CustomSelect/CustomSelect.module.css
+++ b/src/components/common/CustomSelect/CustomSelect.module.css
@@ -18,7 +18,7 @@
   appearance: none;
   color: black;
   background: white;
-  background-color: white
+  background-color: white;
 }
 
 .inputWrapper,
@@ -29,7 +29,7 @@
 .inputWrapper option {
   color: black;
   font-size: 14px;
-  background-color: white
+  background-color: white;
 }
 
 img.selectImage {
