--- a/src/pages/admin/ShowMember/ShowMember.module.css
+++ b/src/pages/admin/ShowMember/ShowMember.module.css
@@ -1,18 +1,19 @@
 .buttons {
-    display: flex;
+  display: flex;
 }
 
 .viewButton {
-    color: #cf2c47;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    margin-right: 10px;
+  color: #cf2c47;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  margin-right: 10px;
 }
 
-.viewButton svg, .editButton svg {
-    width: 20px;
-    height: 20px;
-    fill: #cf2c47;
-    margin-left: 5px;
+.viewButton svg,
+.editButton svg {
+  width: 20px;
+  height: 20px;
+  fill: #cf2c47;
+  margin-left: 5px;
 }
