--- a/src/components/admin/RecordEditPopup/ReocrdEditPopup.module.css
+++ b/src/components/admin/RecordEditPopup/ReocrdEditPopup.module.css
@@ -164,7 +164,8 @@
   justify-content: center;
 }
 
-.currentRecord, .newRecord {
+.currentRecord,
+.newRecord {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -207,7 +208,8 @@
   color: #595959;
 }
 
-.headerItem, .bodyItem {
+.headerItem,
+.bodyItem {
   border-right: 2px solid #e2e2e2;
   height: 100%;
   width: 100%;
@@ -215,7 +217,8 @@
   border-bottom: 2px solid #e2e2e2;
 }
 
-.lastHeaderItem, .lastBodyItem {
+.lastHeaderItem,
+.lastBodyItem {
   border-right: none;
 }
 
