--- a/src/pages/admin/ClubRecords/ClubRecords.module.css
+++ b/src/pages/admin/ClubRecords/ClubRecords.module.css
@@ -21,7 +21,7 @@
   align-items: center;
   justify-content: center;
   font-weight: bold;
-  padding: 0px 3px;
+  padding-bottom: 1px;
 }
 
 .roundBadgeContainer {
