--- a/src/pages/admin/Results/Results.module.css
+++ b/src/pages/admin/Results/Results.module.css
@@ -8,3 +8,24 @@
     margin-bottom: 5px;
   }
 }
+
+.pendingTableOption {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
+  height: max-content;
+  margin-bottom: 10px;
+}
+
+.pendingBackLink {
+  border-bottom: 1px solid black;
+  cursor: pointer;
+  font-weight: 600;
+}
+
+.buttonContainer {
+  display: flex;
+  gap: 20px;
+}
